--- a/agateemieli2.html
+++ b/agateemieli2.html
@@ -18,7 +18,7 @@
               <ul>
                 <li><a href="Cardapio.html" class="menu-item">Cardápio</a></li>
                 <li><a href="agateemieli2.html" class="menu-item">Sobre Nós</a></li>
-                <li><a href="#" class="menu-item">Contato</a></li>
+                <li><a href="Contato.html" class="menu-item">Contato</a></li>
               </ul>
             </nav>
             <h1>Catatau Lanches</h1>
